welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: type color
def faireV(d:color) {
             ^MethodsPicture:7: error: not found: type color
	def marque(c:color) {setCouleurBrosse(Color.c);baisseBrosse();leveBrosse();}
                     ^MethodsPicture:7: error: value c is not a member of object java.awt.Color
	def marque(c:color) {setCouleurBrosse(Color.c);baisseBrosse();leveBrosse();}
                                                    ^