welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	
}
def faireV(d:color) {
	marque(d);avance();gauche();avance();marque(d);recule();droite();avance();marque(d);
	def marque(c:color) {setCouleurBrosse(Color.c);baisseBrosse();leveBrosse();}
}
